# walkways

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
cli/: Cargo.toml
cli/src/: cliargs.rs  lib.rs
core/: Cargo.toml  build.rs
core/benches/: 01_default.rs
core/src/: commands.rs  common.rs  lib.rs  mock_platform.rs  platform.rs  server.rs  simulation.rs  track.rs
core/src/centre/: centre.rs  mod.rs
core/src/platform/: communication.rs  mock_platform.rs  mod.rs  monitor.rs
core/src/proto/: centre.proto  mod.rs  platform.proto
examples/: loader_ex.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: app_config.rs  error.rs  lib.rs  logger.rs
utils/tests/: test_config.rs
