[package]
name = "walkways"
version = "0.0.1"
authors = ["zmrocze <karolochmanmilarski@gmail.com>"]
edition = "2021"
repository = ""
readme = "README.md"
license = "MIT"
keywords = [""]
description = """
Your project description.
"""

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli"}
core = { path = "core" }
human-panic = "1.0.3"
better-panic = "0.2.0"
tracing-subscriber = "0.3.17"
curry-macro = "0.1.0"

[dependencies.clap]
version = "4.3.0"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
