[package]
name = "cli"
version = "0.0.1"
authors = []
description = "CLI interface"
edition = "2018"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }

[dependencies.clap]
version = "4.3.0"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
