[package]
name = "core"
version = "0.0.1"
authors = []
description = "The application core code"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
tracing = "0.1.37"
rand = "0.8.5"
rand_distr = "0.4.3"
tonic = "0.9.2"
prost = "^0.11"
tokio-stream = "0.1.14"
enum_display_derive = "0.1.1"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.clap]
version = "4.3.0"
features = ["cargo", "derive"]

[dependencies.uom]
version = "0.34.0"
default-features = false
features = [
  "f32", "f64", # Floating point storage types.
  "si", "std", # Built-in SI system and std library support.
  "use_serde", # Serde support.
  ]

[build-dependencies]
tonic-build = "0.9.2"