[package]
name = "utils"
version = "0.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "Various utilities and functionalities"
edition = "2018"

[build]
rustc-wrapper = "$HOME/.cargo/bin/sccache"

[dependencies]
failure = "0.1.5"
config = "0.10.1"
lazy_static = "1.4"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

[dependencies.clap]
version = "4.3.0"
features = ["cargo", "derive"]
